# pixelate_mesh

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
examples/: crash.rs  fox.rs  interactive.rs  lazy_fox.rs  mesh.rs  mesh_changing.rs  mesh_interactive.rs  minimal.rs  minimal_cube.rs  scene.rs  scene_changing.rs  scene_interactive.rs  scene_moving.rs  scene_multiple.rs  toggle.rs
src/: creation.rs  lib.rs  ready_checks.rs  recursive_layering.rs  runtime.rs  shadow.rs  util.rs
