[package]
name = "pixelate_mesh"
version = "0.1.0"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
default-features = false
features = [
    "bevy_asset",
    "bevy_render",
]

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
