[package]
name = "pixelate_mesh"
version = "0.1.0"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bevy_dylib = ["bevy/bevy_dylib"]

[dependencies.bevy]
version = "0.10"
default-features = false
features = [
    "bevy_asset",
    "bevy_winit",
    "x11",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_scene",
    "bevy_pbr",
    "bevy_gltf",
    "png"
]
