[package]
name = "pixelate_mesh"
version = "0.5.0"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
edition = "2021"
exclude = ["assets", "docs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/janhohenheim/pixelate_mesh"
description = "Apply a pixelation effect to any Bevy mesh or scene without post-processing."
keywords = ["bevy", "pixelate", "pixelation", "mesh", "scene"]
categories = ["game-development", "graphics", "rendering"]

[dependencies.bevy]
version = "0.15.0"
default-features = false
features = [
    "bevy_asset",
    "bevy_winit",
    "x11",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_scene",
    "bevy_pbr",
    "bevy_sprite",
    "bevy_ui",
    "bevy_gltf",
    "png",
    "tonemapping_luts",
]
